Overflow issue

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   --background: #FFF1DA;
 }
 
-html, body { background-color:var(--background); margin: 0; padding: 0; }
+html, body { background-color:var(--background); margin: 0; padding: 0; overflow-x: hidden; }
 
 body, p { color: var(--black); font-family: 'DM Sans', sans-serif; }
 h1, h2, h3, h4, h5, h6, li { font-family: 'Dela Gothic One', cursive; text-transform: uppercase;}
